Add one more endpoint
